gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
 /* Fonts */
 @font-face {
    font-family:"gradebook-icons";
    src:url(../fonts/gradebook-icons.eot);
    src:url(../fonts/gradebook-icons.eot?#iefix) format("embedded-opentype"),url(../fonts/gradebook-icons.woff) format("woff"),url(../fonts/gradebook-icons.ttf) format("truetype"),url(../fonts/gradebook-icons.svg#gradebook-icons) format("svg");
    font-weight:400;
    font-style:normal
}
#gradeTableWrapper {
  position: relative;
  overflow: visible;
}

#gradeTableWrapper {
  font-size: 0.9em;
}
#gradeTableWrapper td {
  text-align: center;
}
#gradeTableWrapper tbody th {
  text-align: left;
}
#gradeTableWrapper .handsontableInputHolder {
  text-align: center;
}
#gradeTableWrapper .handsontableInputHolder .out-of {
  position: absolute;
  right: 2px;
  background-color: #FAFAFA;
  font-size: 0.8em;
  top: 2px;
  border-left: 1px solid #EEE;
  height: 28px;
  line-height: 28px;
  padding: 0 14px;
}
#gradeTableWrapper .handsontableInput {
  line-height: 30px;
  text-align: center;
}

#gradeTableWrapper .handsontable tr > *:nth-child(1){
  background-color: #F6f6f6;
  text-align: left;
}
#gradeTableWrapper .handsontable tr > *:nth-child(2){
  border-right: 1px solid #BBB;
  background-color: #F6f6f6;
}
#gradeTableWrapper .handsontable thead th {
  border-bottom: 1px solid #BBB;
}

#gradeTableWrapper .handsontable th,
#gradeTableWrapper .handsontable td {
  border-color: #EAEAEA;
  padding: 0;
}
#gradeTableWrapper .handsontable th > .relative,
#gradeTableWrapper .handsontable td > .relative {
  padding: 2px 4px 0;
}
#gradeTableWrapper .handsontable th > .relative > * {
  white-space: normal;
}
#gradeTableWrapper .handsontable th {
  background-color: #F6f6f6;
  height: 102px;
}

#gradeTableWrapper thead th {
  text-align: left;
}
#gradeTableWrapper thead th .relative {
  height: 100%;
}
#gradeTableWrapper tbody td .relative {
  height: 100%;
  min-height: 30px;
  height: 30px;
}
#gradeTableWrapper .handsontable td {
  white-space: nowrap;
}
#gradeTableWrapper .gb-title {
  font-weight: bold;
  white-space: normal;
  text-align: left;
  line-height: 1.2em;
  display: inline-block;
  cursor: pointer;
  width: calc(100% - 16px);
}
#gradeTableWrapper .gb-title:hover:after {
  font-family: 'gradebook-icons';
  content: '\f0dc';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title.gb-sorted-asc:after {
  font-family: 'gradebook-icons';
  content: '\f0de';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title.gb-sorted-desc:after {
  font-family: 'gradebook-icons';
  content: '\f0dd';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title .gb-category {
  font-style: italic;
}
#gradeTableWrapper .gb-title .gb-category .gb-category-weight {
  font-style: normal;
}
#gradeTableWrapper .gb-grade-section,
#gradeTableWrapper .gb-due-date,
#gradeTableWrapper .gb-category {
  text-align: left;
  font-size: 0.9em;
  line-height: 1.3em;
}
#gradeTableWrapper .gb-grade-item-flags {
  position: absolute;
  bottom: 0;
  left: 5px;
}
#gradeTableWrapper th .btn-group,
#gradeTableWrapper td .btn-group {
  position: absolute;
  bottom: 5px;
  right: 5px;
}
#gradeTableWrapper .btn-group > a {
  line-height: 10px;
  padding: 0 10px;
  opacity: 0.2;
  border-color: #EEE;
}
#gradeTableWrapper th:hover .btn-group > a,
#gradeTableWrapper td:hover .btn-group > a,
#gradeTableWrapper .highlight .btn-group > a {
  opacity: 1;
}

#gradeTableWrapper .highlight {
  color: inherit;
  font-weight: inherit;
}
#gradeTableWrapper .currentCol,
#gradeTableWrapper .currentRow,
#gradeTableWrapper .currentCol .relative,
#gradeTableWrapper .currentRow .relative {
  background-color: #F6F6F6 !important;
}
#gradeTableWrapper th.currentCol,
#gradeTableWrapper th.currentRow,
#gradeTableWrapper .handsontable tr > .currentRow:nth-child(1),
#gradeTableWrapper .handsontable tr > .currentRow:nth-child(2) {
  background-color: #EEE;
}
#gradebookSpreadsheet.gb-grouped-by-category #gradeTableWrapper th.gb-categorized {
  border-top: 10px solid #F0F0F0;
}
#gradeTableWrapper .swatch {
  width: 1em;
  height: 1em;
  display: inline-block;
  margin-right: 4px;
  box-shadow: 1px 1px 2px #CCC;
}
#gradeTableWrapper .gb-category-weight {
  color: #999;
  font-weight: normal;
}
#gradeTableWrapper .gb-uncategorized {
  text-align: left;
  color: #999;
}
#gradeTableWrapper tbody td .gb-value {
  line-height: 30px;
}
#gradeTableWrapper tbody td .btn-group {
  position: absolute;
  right: 0;
  bottom: 2px;
}
#gradeTableWrapper .gb-comment-notification {
  position: absolute;
  top: 2px;
  right: 8px;
  line-height: 1em;
  color: #AAA;
}
#gradeTableWrapper .gb-comment-notification:before,
.gb-flag-comment:before {
  font-family: "gradebook-icons";
  content: '\f075';
}

#gradeTableWrapper .gb-notification {
  position: absolute;
  left: 10px;
  top: 5px;
  font-size: 16px;
  min-width: 16px;
}
[class*="gb-flag"] {
  color: #999;
  font-family: 'gradebook-icons';
  display: inline-block;
  min-width: 16px;
  text-align: center;
  font-style: normal;
}
.gb-flag-not-counted:before {
  content: '\e600';
}
.gb-flag-not-released:before {
  content: '\e601';
}
.gb-flag-not-released:before {
  content: '\e601';
}
.gb-flag-counted,
.gb-flag-released {
  display: none;
}
#gradeTableWrapper .gb-extra-credit {
  background-color: #FCF8E3;
}
.gb-flag-extra-credit:before {
  content: '\f0fe';
  color: rgb(200,144,0);
}
.gb-flag-external:before {
  content: '\f045';
}
.gb-flag-read-only:before {
  content: '\f023';
}
#gradeTableWrapper th .gb-flag-extra-credit,
#gradeTableWrapper th .gb-external-app {
  font-size: 1.1em;
  vertical-align: baseline;
  display: inline-block;
}
#gradeTableWrapper th .relative > .gb-flag-extra-credit,
#gradeTableWrapper th .relative > .gb-external-app {
  float: left;
  vertical-align: top;
  line-height: inherit;
  margin-right: 4px;
}
#gradeTableWrapper th .gb-flag-extra-credit:before {
  color: #999;
}
#gradeTableWrapper .gb-save-success {
  background-color: #DFF0D8 !important;
}
#gradeTableWrapper .gb-save-success .gb-notification:before {
  font-family: "gradebook-icons";
  content: "\f05d" !important;
  color: green;
}
#gradeTableWrapper .gb-save-error {
	background-color: #FFBBBB !important;
}
#gradeTableWrapper .gb-save-error .gb-notification:before,
.gb-flag-save-error:before {
  font-family: "gradebook-icons";
  content: "\f06a" !important;
  color: rgb(204,0,0) !important;
}
#gradeTableWrapper .gb-save-invalid {
  background-color: #FCF8E3 !important;
}
#gradeTableWrapper .gb-save-invalid .gb-notification:before,
.gb-flag-save-invalid:before {
  font-family: "gradebook-icons";
  content: "\f071" !important;
  color: rgb(200,144,0) !important;
}
#gradeTableWrapper .gb-read-only {
  color: #777;
}
#gradeTableWrapper .gb-read-only .gb-notification:before {
  font-family: "gradebook-icons";
  content: '\f023';
  color: #DDD;
}
#gradeTableWrapper .gb-read-only .gb-notification.gb-flag-extra-credit:after {
  font-family: "gradebook-icons";
  content: '\f0fe';
  color: rgb(200,144,0);
  font-size: 10px;
  position: absolute;
  right: -5px;
  bottom: -5px;
}
#gradeTableWrapper .gb-concurrent-edit .gb-notification:before,
.gb-flag-concurrent-edit:before {
  font-family: "gradebook-icons";
  content: '\f040';
  color: rgb(204,0,0);
}

/* Cell Metadata Summary */
.gb-metadata {
  position: absolute;
  width: 300px;
  padding: 10px;
  font-size: 0.8em;
  background: #FAFAFA;
  color: #212121;
  z-index: 1000;
  border-radius: 5px;
  box-shadow: 1px 1px 5px 1px #999;
}
.gb-metadata p,
.gb-metadata dl,
.gb-metadata ul,
.gb-metadata blockquote {
  margin: 0;
}
.gb-metadata dt {
  width: 80px !important;
  color: #555;
}
.gb-metadata dd {
  margin-left: 90px !important;
}
.gb-metadata blockquote {
  font-size: 1em;
  padding: 5px;
  color: #666;
}
.gb-metadata:after, .gb-metadata:before {
  bottom: 100%;
  left: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
.gb-metadata:after {
  border-color: transparent;
  border-bottom-color: #FAFAFA;
  border-width: 10px;
  margin-left: -10px;
}
.gb-metadata:before {
  border-color: transparent;
  border-bottom-color: #DDD;
  border-width: 10px;
  margin-left: -10px;
}
.gb-metadata .gb-metadata-close:before {
  position: absolute;
  right: 5px;
  top: 5px;
  font-family: 'gradebook-icons';
  content: '\f00d';
}
.gb-metadata .gb-metadata-notifications ul {
  list-style: none;
  padding-left: 0;
}
#gradebookGradesToolbar {
  border-top: 1px solid #F6f6f6;
}
#gradebookGradesToolbar button {
  margin: 0;
}
#gradeTableSummary {
  overflow: hidden;
  font-size: 0.8em;
  padding: 0 18px 0 12px;
  background-color: #FAFAFA;
  border-top: 1px solid #F6f6f6;
  color: #555;
  clear: both;
}
#gradeTableSummary .gb-item-summary-counts.warn-items-hidden,
#gradeTableSummary .gb-student-summary-counts.warn-students-hidden {
  color: #CA7311;
  font-weight: bold;
}
/* table caption and toggle */
#captionToggle:before {
  font-family: 'gradebook-icons';
  content: '\f11c';
}
#gradeTableWrapper table caption {
  /* hide the caption from users, but retain for screen readers */
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}
#gradeTableWrapper table caption.maximized {
  position: fixed;
  width: 80%;
  height: 60%;
  background: #FAFAFA;
  color: #212121;
  z-index: 1000;
  top: 20%;
  left: 150px;
  padding: 10px;
  margin: 0;
  border-radius: 5px;
  box-shadow: 1px 1px 20px 5px #999;
  overflow: auto;
  clip: auto;
}
.handsontable th {
  overflow: visible; /* to allow visual cue to be rendered nicely */
}
.gb-hidden-column-visual-cue {
  position: absolute;
  top: 0;
  right: -10px;
  cursor: pointer;
  width: 19px;
  border: 1px solid transparent;
  height: 15px;
  line-height: 14px;
  padding: 0 1px;
  border-radius: 2px;
}
.gb-grouped-by-category .gb-hidden-column-visual-cue {
  top: -10px;
}
.gb-hidden-column-visual-cue:hover,
.gb-hidden-column-visual-cue:active,
.gb-hidden-column-visual-cue:focus {
  text-decoration: none;
  background-color: #FFF;
  background-color: rgba(255,255,255,0.5);
  border-color: #43a7c8;
  border-color: rgba(67, 167, 200, 0.5);
}
.gb-hidden-column-visual-cue:before {
  font-family: 'gradebook-icons';
  content: '\f0d9';
  float: left;
}
.gb-hidden-column-visual-cue:after {
  font-family: 'gradebook-icons';
  content: '\f0da';
  float: right;
}
.gb-category-average {
    background-color: #FAFAFA;
}
.gb-category-average .gb-value {
    font-weight: bold;
    color: #666;
}

/* For Webkit browsers, force the scrollbars to be visible
   (due to hidden scroll bars in OS X)
*/
.ht_clone_left.handsontable {
  height: calc(100% - 10px) !important;
}
.ht_clone_top.handsontable {
  width: calc(100% - 10px) !important;
}
.wtHolder::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}
.wtHolder::-webkit-scrollbar-track {
  background-color: #EEE;
}
.wtHolder::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: rgba(170,170,170,0.5);
}
.wtHolder::-webkit-scrollbar-thumb:hover {
  background-color: #AAA;
}

